--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.2.2",
         "laravel/pint": "^1.13",
-        "laravel/sail": "^1.41",
+        "laravel/sail": "^1.44",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8"
@@ -55,8 +55,10 @@
         ],
         "test": [
             "@php artisan config:clear --ansi",
-            "@php artisan test"
-        ]
+            "./vendor/bin/sail artisan test --parallel"
+        ],
+        "migrate": "./vendor/bin/sail artisan migrate",
+        "migrate:fresh": "./vendor/bin/sail artisan migrate:fresh --seed"
     },
     "extra": {
         "laravel": {
